[package]
name = "gpu-occupy"
version = "0.1.0"
edition = "2024"
description = "Interactive Rust CLI for reserving NVIDIA GPU memory on Linux"
license = "Apache-2.0"
readme = "README.md"
keywords = ["gpu", "cuda", "nvidia", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = "3.5.0"
dialoguer = "0.12.0"
